--- a/style.css
+++ b/style.css
@@ -1,61 +1,52 @@
 * {
-    margin: 0px;
     padding: 0px;
+    margin: 0px;
 }
 
 body {
-    display: grid;
-    grid-template-rows: 100px 1fr 100px;
-    grid-template-columns: 150px 1fr;
-    min-height: 100vh;
-
-}
-
-.header {
     display: flex;
-    margin: 0px;
-    background-color: rgb(61, 57, 57);
-    justify-content: center;
-    padding: 30px;
-    color: white;
-    grid-column-start: 1;
-    grid-column-end: -1;
-
-
-}
-
-.aside {
-    padding: 10px;
-    background-color: rgb(100, 93, 93);
-    color: white;
-}
-
-.main {
-
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-gap: 20px;
-    padding: 20px;
-}
-
-.section {
-    background-color: rgb(82, 76, 76);
-    padding: 20px;
-}
-
-.footer {
-    display: flex;
-    grid-column-start: 1;
-    grid-column-end: -1;
-    padding: 20px;
-    background-color: rgb(71, 70, 70);
     justify-content: center;
     align-items: center;
+    height: 100vh;
 }
 
-@media (max-width:760px) {
-    .main {
-        grid-template-columns: 1fr;
-    }
+.card {
+    display: flex;
+    flex-direction: column;
+    border-radius: 5px;
+    background-color: azure;
+    width: 150px;
+    height: 200px;
 
+    box-shadow: 5px 5px 5px black;
+}
+
+p {
+    font-size: 9px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    text-align: left;
+    margin-left: 3px;
+}
+
+h1 {
+    font-size: 10px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    margin-left: 3px;
+}
+
+a {
+    background-color: rgb(0, 89, 255);
+    width: 40px;
+    height: 20px;
+    margin-top: 10px;
+    margin-left: 3px;
+    border-radius: 4px;
+    border: 0px solid white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    font-size: 9px;
+    color: white;
+    text-decoration: none;
 }
